# windows-docker

./: .gitignore  .gitmodules  README.md  docker-compose.yml
shared/scripts/: deploy_webservice.py  install.bat  installWindowsComponents.ps1  pyproject.toml  setupOpenSsh.ps1  setupWindowsPorts.ps1  setupWindowsWebservice.ps1
