[tool.poetry]
name = "deploy-webservice"
version = "0.1.0"
description = ""
authors = ["Xaver Gruber <xaver.max.gruber@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^4.0.0"
scpclient = "^0.7"
dotenv = "^0.9.9"
scp = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
